kubernetes/prod/apps/biz/erp/artha/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    external-dns.alpha.kubernetes.io/target: ipv4.${CLUSTER_SECRET_BIZ_DOMAIN}
    ingress.kubernetes.io/ssl-redirect: "true"
    meta.helm.sh/release-name: artha
    meta.helm.sh/release-namespace: biz
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/issuer-name: buypass-production
    cert-manager.io/certificate-name: www-${CLUSTER_SECRET_BIZ_DOMAIN/./-}
  labels:
    app: artha
    app.kubernetes.io/managed-by: Helm
    chart: artha
    helm.toolkit.fluxcd.io/name: artha
    helm.toolkit.fluxcd.io/namespace: biz
    heritage: Helm
    release: artha
  name: artha-opnsense-ingress
  namespace: biz
spec:
  ingressClassName: external
  rules:
    - host: www.${CLUSTER_SECRET_BIZ_DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: artha
                port:
                  number: 8069
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - www.${CLUSTER_SECRET_BIZ_DOMAIN}
      secretName: "www-${CLUSTER_SECRET_BIZ_DOMAIN/./-}-tls"
